# EchoPi

./: .gitignore  CRITICAL_ISSUES.md  INSTALL.md  MANUAL_AUDIO_FIX.md  README.md  apply_audio_fix.sh  calibrate_amplitude.py  check_system_health.sh  collect_diagnostics.sh  echopi-i2s-96k.dts  frequency_response.py  frequency_response_power.py  pyproject.toml  requirements.txt  start_gui_local.sh  test_compare.py  test_distance_check.py  test_distance_peaks.py  test_echo_calc.py  test_multi.py  test_peaks.py  test_sonar_debug.py
docs/: COMMANDS.md  DIAGNOSTIC.md  SONAR_GUI.md
src/echopi/: __init__.py  cli.py  config.py  settings.py
src/echopi/dsp/: __init__.py  chirp.py  correlation.py  signal_optimization.py  tone.py
src/echopi/gui/: __init__.py  scope.py  signal_generator.py  sonar.py
src/echopi/io/: __init__.py  audio.py  audio_safe.py
src/echopi/utils/: distance.py  latency.py
unit/: test_dsp.py
